2015-07-24  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	Backport from mainline r226158.
	2015-07-24  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	PR target/65711
	* config/aarch64/aarch64-linux.h (LINUX_TARGET_LINK_SPEC): Move
	-dynamic-linker within %{!static %{!shared, and -rdynamic within
	%{!static.

2015-07-24  Ilya Enkovich  <enkovich.gnu@gmail.com>

	Backport from mainline r226155.
	2015-07-24  Ilya Enkovich  <enkovich.gnu@gmail.com>

	PR ipa/66566
	* ipa-inline-analysis.c (estimate_calls_size_and_time): Check
	edge summary is available.

2015-07-23  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2015-07-17  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/66891
	* calls.c (expand_call): Wrap precompute_register_parameters with
	NO_DEFER_POP/OK_DEFER_POP to prevent deferred pops.

	2015-07-15  Uros Bizjak  <ubizjak@gmail.com>

	PR target/58066
	* config/i386/i386.md (*tls_global_dynamic_64_<mode>): Depend on SP_REG.
	(*tls_local_dynamic_base_64_<mode>): Ditto.
	(*tls_local_dynamic_base_64_largepic): Ditto.
	(tls_global_dynamic_64_<mode>): Update expander pattern.
	(tls_local_dynamic_base_64_<mode>): Ditto.

	2015-07-15  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/58066
	* calls.c (expand_call): Precompute register parameters before stack

2015-07-23  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline r225867.
	2015-07-16  Martin Jambor  <mjambor@suse.cz>

	* ipa-prop.h (param_aa_status): Rename to ipa_param_aa_status.  Adjust
	all uses.  Fix two typos in its general comment.
	(func_body_info): Rename to ipa_func_body_info.  Adjust all uses.

2015-07-23  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline r225838.
	2015-07-15  Paolo Bonzini  <bonzini@gnu.org>
	    	    Martin Jambor  <mjambor@suse.cz>

	PR ipa/66760
	* ipa-inline-analysis.c (unmodified_parm_or_parm_agg_item): Accept
	struct func_body_info* instead of struct ipa_node_params*, expecting
	fbi->info to be filled in.  Replace throughout.  Adjust call to